imp: 终于想到方法写出了不依赖 JDK 的 Cleaner